--- a/css/styles.css
+++ b/css/styles.css
@@ -426,14 +426,16 @@ section {
   width: 94%;
   margin-left: 3%;
   margin-right: 3%;
-  height: 400px;
+  height: 390px;
   position: relative;
 }
 
 .proj-area .image {
   display: block;
   width: 100%;
-  height: 100%;
+  max-height: 390px;
+  height: 390px;
+  object-fit: scale-down;
 }
 
 .proj-area .overlay {
