--- a/css/styles.css
+++ b/css/styles.css
@@ -218,6 +218,7 @@ body p {
 
 .ak-drop .dropdown-item:hover {
     background: #181818;
+    color: #39ff14;
 }
 
 .dropdown:hover .ak-drop {
@@ -298,21 +299,21 @@ body p {
   }
 
   .banner-one {
-    background: linear-gradient(rgba(0,0,0,0.3), rgba(0, 0, 0, 0.4)) , url(../img/canon-bg.jpg) no-repeat center;
+    background: url(../img/ompixs-ban1.jpeg) no-repeat center;
     min-height: 500px;
     background-size: cover;
     padding-top: 100px;
 }
 
 .banner-two {
-    background: linear-gradient(rgba(0,0,0,0.3), rgba(0, 0, 0, 0.4)) , url(../img/photo-gadget.jpg) no-repeat center;
+    background: url(../img/ompixs-ban2.jpeg) no-repeat center;
     min-height: 500px;
     background-size: cover;
     padding-top: 100px;
 }
 
 .banner-three {
-    background: linear-gradient(rgba(0,0,0,0.3), rgba(0,0,0,0.4)) , url(../img/gadget-3.webp) no-repeat center;
+    background: url(../img/ompixs-ban4.jpeg) no-repeat center;
     min-height: 500px;
     background-size: cover;
     padding-top: 100px;
@@ -631,7 +632,7 @@ section {
   }
 
   .testimonial-area {
-    background: linear-gradient(rgba(0, 0, 0, 0.7), rgba(0, 0, 0, 0.7)) , url(../img/testi-camera.jpg) no-repeat center;
+    background: linear-gradient(rgba(0, 0, 0, 0.6), rgba(0, 0, 0, 0.6)) , url(../img/ompixs-ban3.jpeg) no-repeat center;
     min-height: 500px;
     background-size: cover;
     padding: 30px 0px;
@@ -788,7 +789,7 @@ section {
 .footer-area {
     background: #181818;
     padding-top: 30px;
-    padding-bottom: 15px;
+    padding-bottom: 30px;
 }
 
 .footer-text {
@@ -879,4 +880,70 @@ section {
     color: #39ff14;
     text-decoration: underline;
     text-decoration-color: #39ff14;
+  }
+
+  .regvideo {
+    width: 100%;
+    height: 600px;
+  }
+
+  .other-banners {
+    background: linear-gradient(rgba(0,0,0,0.6), rgba(0, 0, 0, 0.6)) , url(../img/IMG_8252.jpg) no-repeat center;
+    min-height: 350px;
+    background-size: cover;
+    padding-top: 100px;
+  }
+
+  .video-bg {
+    position: absolute;
+    top: 0;
+    left: 0;
+    width: 100%;
+    height: 600px;
+    background: linear-gradient(rgba(0, 0, 0, 0.5), rgba(0, 0, 0, 0.6)) , url(../img/IMG_7371.jpg) no-repeat center;
+    min-height: 600px;
+    background-size: cover;
+    z-index: 1;
+    padding-top: 200px;
+  }
+
+  .water-mark {
+    position: absolute;
+    bottom: 20px;
+    left: 20px;
+  }
+
+  .water-mark .img-watermark {
+    width: 250px;
+  }
+
+  .video-bg h1 {
+    letter-spacing: 10px;
+    font-size: 45px;
+  }
+
+  .playvideo {
+    color: #040001;
+    text-decoration: none;
+    margin-top: 20px;
+    font-size: 20px;
+    border: 1px solid #39ff14;
+    width: 200px;
+    background: #39ff14;
+  }
+
+  .playvideo:hover {
+    color: #39ff14 !important;
+    border: 1px solid #39ff14 !important;
+    background: #040001 !important;
+  }
+
+  .close-hidden {
+    position: absolute;
+    top: 0px;
+    right: 20px;
+    z-index: 1;
+    font-size: 25px;
+    display: none;
+    cursor: pointer;
   }
