--- a/css/styles.css
+++ b/css/styles.css
@@ -981,3 +981,169 @@ section {
     display: none;
     cursor: pointer;
   }
+
+  .sidebar-area h5 {
+    color: white;
+    text-transform: uppercase;
+  }
+
+  .green-bot {
+    width: 50px;
+    height: 3px;
+    background: #39ff14;
+    transition: all 0.5s ease-in-out;
+  }
+
+  .sidebar-header {
+    cursor: pointer;
+    transition: all 0.5s ease-in-out;
+  }
+
+  .sidebar-header:hover .green-bot {
+    width: 100%;
+  }
+  
+  .sidebar-menu {
+    background: #181818;
+    margin-top: 20px;
+    box-shadow: 0 3px 10px rgb(0 0 0 / 0.2);
+    list-style-type: none;
+    padding-inline-start: 0px;
+  }
+
+  .sidebar-menu li a {
+    font-size: 15px;
+    color: white;
+    border-bottom: 2px solid #39ff14;
+    padding: 10px 20px;
+    display: block;
+    text-decoration: none;
+    transition: all 0.5s ease-in-out;
+  }
+
+  .sidebar-menu li a span {
+    color: #39ff14;
+  }
+
+  .sidebar-menu li a:hover {
+    background: #39ff14;
+    color: #181818;
+    font-weight: 500;
+  }
+
+  .sidebar-menu li a:hover span {
+    color: white;
+    font-weight: bold;
+  }
+
+  .sidebar-menu li a.active {
+    background: #39ff14;
+    color: #181818;
+    font-weight: 500;
+  }
+
+  .sidebar-menu li a.active span {
+    color: white;
+    font-weight: bold;
+  }
+
+  .btn-search {
+    color: #181818;
+    background: #39ff14;
+    border: 1px solid #39ff14;
+    font-family: 'Montserrat', sans-serif;
+    font-weight: 600;
+    border-radius: 0px;
+    text-transform: uppercase;
+    padding: 10px 20px;
+    transition:all 0.8s, color 0.3s 0.3s;
+  }
+
+  .btn-search:hover {
+    color: #39ff14 !important;
+    background: #181818 !important;
+    border: 1px solid #39ff14 !important;
+    box-shadow:300px 0 0 0 #181818 inset !important;
+  }
+
+  .cam-item {
+    transition: all 0.5s ease-in-out;
+  }
+
+  .cam-item a .slider-area .item-head {
+    transition: all 0.5s ease-in-out;
+  }
+
+  .cam-item a .slider-area .item-body {
+    transition: all 0.5s ease-in-out;
+  }
+
+  .cam-item .slider-area {
+    background: white;
+    transition: all 0.5s ease-in-out;
+  }
+
+  .cam-item .slider-area .img-slider {
+    width: 100%;
+    /* height: 200px; */
+  }
+
+  .cam-item a:hover .slider-area {
+    background: #39ff14;
+  }
+
+  .cam-item a:hover .slider-area .item-head {
+    color: #181818;
+  }
+
+  .cam-item a:hover .slider-area .item-body {
+    color: white;
+  }
+
+  .mobile-menu {
+    background: #040001;
+    box-shadow: 0 3px 10px rgb(0 0 0 / 0.2);
+  }
+
+  .mobile-menu a {
+    text-align: center;
+    color: #39ff14;
+    text-decoration: none;
+    font-weight: 500;
+    font-size: 16px;
+    text-transform: uppercase;
+    padding: 7px 20px;
+  }
+
+  .mobile-menu a:first-child {
+    border-right: 1px solid #39ff14;
+  }
+
+  .mobilemenu-area {
+    position: fixed;
+    top: 0;
+    left: 0;
+    width: 100%;
+    height: 100%;
+    background: #181818;
+    z-index: 9999;
+    display: none;
+  }
+
+  .menu-head {
+    box-shadow: 0 3px 10px rgb(0 0 0 / 0.2);
+    padding: 10px 20px;
+    font-size: 17px;
+    font-weight: 400;
+  }
+
+  .filtermenu-area {
+    position: fixed;
+    top: 0;
+    left: 0;
+    width: 100%;
+    height: 100%;
+    background: #181818;
+    z-index: 9999;
+    display: none;
+  }
