--- a/css/styles.css
+++ b/css/styles.css
@@ -1147,3 +1147,154 @@ section {
     z-index: 9999;
     display: none;
   }
+
+  .show-bread {
+    font-size: 14px;
+  }
+
+  .show-bread a {
+    color: #39ff14;
+    text-decoration: none;
+  }
+
+  .show-bread span {
+    color: white;
+  }
+
+  .show-content p {
+    color: white;
+    font-size: 16px;
+  }
+
+  .show-content p span {
+    color: #39ff14;
+    font-size: 500;
+  }
+
+  .note-rental {
+    color: white;
+  }
+
+  .note-rental a {
+    color: #999;
+    text-decoration: none;
+  }
+
+  .desc-area {
+    margin-top: 30px;
+  }
+
+  .desc-area h4 {
+    color: white;
+    padding: 10px 20px;
+    background: #2e2e2e;
+    font-family: 'Barlow', sans-serif;
+    text-transform: uppercase;
+    font-size: 18px;
+    font-weight: 600;
+  }
+
+  .desc-area .show-desc {
+    font-size: 14px;
+    line-height: 1.8em;
+  }
+
+  .rental-group {
+    font-family: 'Barlow', sans-serif;
+  }
+
+  .rental-group .form-label {
+    font-weight: 500;
+    color: whitesmoke;
+  }
+
+  .rental-group .form-control {
+    border-radius: 0px;
+    background: transparent;
+    color: white;
+  }
+
+  .rental-group .form-control:focus {
+    color: white;
+    box-shadow: none;
+    border-color: white;
+  }
+
+  /* Custom Select2 Styles */
+
+.select2-container--default .select2-selection--single {
+  border-radius: 0px !important;
+  height: 35px !important;
+  background: transparent !important;
+  color: white !important;
+}
+
+.select2-container--default .select2-selection--single .select2-selection__rendered {
+  line-height: 33px !important;
+  color: white !important;
+}
+
+.select2-container--default .select2-selection--single .select2-selection__arrow {
+  height: 33px !important;
+  color: white !important;
+}
+
+.select2-container--default .select2-selection--multiple {
+  border-radius: 0px !important;
+  height: 35px !important;
+}
+
+.select2-container--default .select2-search--dropdown .select2-search__field:focus {
+  outline: 0 !important;
+}
+
+.btn-send {
+  color: #39ff14;
+  background: transparent;
+  font-size: 17px;
+  font-weight: 500;
+  border: 2px solid #39ff14 !important;
+  border-radius: 0px;
+  transition:all 0.8s, color 0.3s 0.3s;
+  font-family: 'Barlow', sans-serif;
+  text-transform: uppercase;
+}
+
+.btn-send:hover {
+  color: white !important;
+  background: #39ff14 !important;
+  border: 2px solid #39ff14 !important;
+  box-shadow:300px 0 0 0 #39ff14 inset !important;
+}
+
+.responsive .slider-arrow {
+  border: 0;
+  background: #39ff14;
+  display: block !important;
+  height: 40px;
+  width: 35px;
+  position: absolute;
+  z-index: 5;
+  top: 50%;
+  transform: translate(0, -50%);
+  outline: 0;
+  cursor: pointer;
+}
+
+/* Modificação só pra a seta do próximo carousel ficar na direita */
+
+.responsive .slider-arrow.next {
+  right: 0;
+}
+
+.responsive .show-img img{
+  width: 95%;
+  margin: 0 auto;
+  height: 70px;
+  cursor: pointer;
+}
+
+.img-responsive {
+  width: 100%;
+  height: auto;
+}
